--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.378.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,6 +26,7 @@
     "react-router-dom": "^6.23.0",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^10.0.5",
+    "swiper": "^11.1.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.6"
