--- a/portfolio/.env
+++ b/portfolio/.env
@@ -1,2 +1,3 @@
-BACKEND_URL=http://localhost:4500
-DASHBOARD_URL= http://localhost:5173/
+BACKEND_URL=https://mern-portfolio-0moh.onrender.com
+DASHBOARD_URL= http://localhost:5173
+PORTFOLIO_DB_URL=mongodb+srv://admin:0EsUBJCFmCBIXYQz@cluster0.vqxjk6l.mongodb.net/backendportfolio?retryWrites=true&w=majority
